# qjack

./: .gitignore  Cargo.toml  LICENSE  README.md  publish.sh
.github/workflows/: check.yaml
examples/: Dockerfile  README.md  docker-compose.yaml  friends.rs  init.sql  readme.rs  transaction.rs  user.rs
macros/: Cargo.toml
macros/examples/: from_row.rs
macros/src/: lib.rs
macros/src/model/: attributes.rs  heck.rs  mod.rs
sample/: Cargo.toml  README.md  docker-compose.yaml
sample/src/: main.rs
src/: __model__.rs  lib.rs  mod_q.rs  model.rs  params.rs  pool.rs  q.rs  query.rs
src/__q__/: fetch_query.rs  mod.rs  param.rs  str_query.rs  transaction.rs
