[workspace]
members = [
    ".",
    "macros",
]


[package]
name = "qjack"
version = "0.1.0"
edition = "2021"


[dependencies]
sqlx = "0.6"
futures-util = "0.3"


[features]
# default = []
default = ["rt_tokio", "db_postgres"]

rt_tokio = ["sqlx/runtime-tokio-native-tls"]
rt_async-std = ["sqlx/runtime-async-std-native-tls"]

db_postgres = ["sqlx/postgres"]
db_mysql = ["sqlx/mysql"]
db_sqlite = ["sqlx/sqlite"]


[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
