[workspace]
members = [
    ".",
    "macros",

    # ↓ comment out just before publishing
    "sample"
]


[package]
name = "qjack"
version = "0.1.0"
edition = "2021"
authors = ["kanarus <kanarus786@gmail.com>"]
description = "ergonomic sqlx wrapper"
documentation = "https://docs.rs/qjack/"
homepage = "https://crates.io/crates/qjack"
repository = "https://github.com/kana-rus/qjack"
readme = "./README.md"
keywords = ["database", "async", "postgres", "mysql", "sqlite"]
categories = ["database", "asynchronous"]
license = "MIT"


[dependencies]
sqlx = "0.6"
futures-util = "0.3"
qjack_macros = { version = "0.1.0", path = "macros" }


[features]
default = []

rt_tokio = ["sqlx/runtime-tokio-native-tls"]
rt_async-std = ["sqlx/runtime-async-std-native-tls"]

db_postgres = ["sqlx/postgres"]
db_mysql = ["sqlx/mysql"]
db_sqlite = ["sqlx/sqlite"]
