[package]
name = "qjack_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
heck = { version = "0.4", features = ["unicode"] }

[dev-dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls"] }
