[package]
name = "qjack_macros"
version = "0.1.0"
edition = "2021"
authors = ["kanarus <kanarus786@gmail.com>"]
description = "macros for qjack"
documentation = "https://docs.rs/qjack_macros/"
homepage = "https://crates.io/crates/qjack_macros"
repository = "https://github.com/kana-rus/qjack_macros"
readme = "../README.md"
keywords = ["database", "async", "postgres", "mysql", "sqlite"]
categories = ["database", "asynchronous"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
heck = { version = "0.4", features = ["unicode"] }

[dev-dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls"] }
